# zero-cloud

./: BUILD_DOCKER  README.md  zero-cloud.cabal
dockerfiles/0-logger/: Dockerfile  docker-compose.yml
service/logger/: Main.hs  RFC.txt
service/sensor/: Main.hs  RFC.txt
service/simple/: Main.hs
src/Control/ZeroCloud/: Logger.hs
src/Control/ZeroCloud/Database/: MongoDB.hs
test/Control/ZeroCloud/: LoggerSpec.hs
test/Data/String/: StripSpec.hs
